# slambook

./: README.md
ch10/ceres_custombundle/: CMakeLists.txt  SnavelyReprojectionError.h  ceresBundle.cpp
ch10/ceres_custombundle/common/: BALProblem.cpp  BundleParams.h
ch10/g2o_custombundle/: CMakeLists.txt  g2o_bundle.cpp  initial.ply
ch10/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h  BundleParams.h
ch10/g2o_custombundle/common/flags/: command_args.cpp  command_args.h
ch11/pose_graph/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
ch12/loop_closure/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
ch13/dense_RGBD/: CMakeLists.txt  main.cpp  octo_mapping.cpp  octomap.bt
ch13/dense_monocular/: CMakeLists.txt  main.cpp
ch2/: .CMakeList.txt.swp  CMakeLists.txt  a.out  helloslam.cpp  libHelloSLAM.cpp  useHello.cpp
ch3/: CMakeLists.txt  main.cpp
ch3/RotationMatrix/: CMakeLists.txt  main.cpp
ch3/homework1/: CMakeLists.txt  main.cpp
ch3/homework2/: CMakeLists.txt  main.cpp
ch3/quaternioned/: CMakeLists.txt  main.cpp
ch3/useEigen/: CMakeLists.txt  main.cpp
ch3/useGeometry/: CMakeLists.txt  main.cpp
ch3/visualiseGeometry/: CMakeLists.txt  main.cpp
ch4/useSophus/: CMakeLists.txt  main.cpp
ch5/cv:mat exercise1/: CMakeLists.txt  main.cpp
ch5/imageBasics/: CMakeLists.txt  main.cpp
ch5/pcl_test/: CMakeLists.txt  main.cpp
ch5/pointcloud/: CMakeLists.txt  main.cpp
ch5/undistort-image/: CMakeLists.txt  main.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/curve_fitting_g2o/: CMakeLists.txt  main.cpp
ch7/: 说明
ch7/epipolar/: CMakeLists.txt  main.cpp
ch7/feature_extraction/: CMakeLists.txt  main.cpp
ch7/pose_estimation_2d2d/: CMakeLists.txt  main.cpp
ch7/pose_estimation_3d2d/: CMakeLists.txt  main1.cpp
ch7/pose_estimation_3d3d/: CMakeLists.txt  main.cpp
ch7/trianglation/: CMakeLists.txt  main.cpp
ch8/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
ch8/useLK/: CMakeLists.txt  main.cpp
project1(ch9)/0.3/include/myslam/: g2o_types.h  map.h
project1(ch9)/0.3/src/: CMakeLists.txt  mappoint.cpp  visual_odometry.cpp
project1(ch9)/0.3/test/: run_vo.cpp
project1(ch9)/0.4/: CMakeLists.txt
project1(ch9)/0.4/config/: default.yaml
project1(ch9)/0.4/include/myslam/: mappoint.h  visual_odometry.h
project1(ch9)/0.4/src/: camera.cpp  config.cpp  g2o_types.cpp  mappoint.cpp  visual_odometry.cpp
project1(ch9)/0.4/test/: run_vo.cpp
project1(ch9)/2d-2d/include/myslam/: camera.h  common_include.h  frame.h  visual_odometry.h
project1(ch9)/2d-2d/src/: CMakeLists.txt  map.cpp  visual_odometry.cpp
project1(ch9)/3d-2d/: visual_odometry_wrong
project1(ch9)/3d-2d/config/: default.yaml
project1(ch9)/3d-2d/include/myslam/: config.h  mappoint.h  visual_odometry.h
project1(ch9)/3d-2d/src/: visual_odometry.cpp
project1(ch9)/3d-2d/test/: run_vo.cpp
project1(ch9)/3d-3d/config/: default.yaml
project1(ch9)/3d-3d/include/myslam/: common_include.h  visual_odometry.h
project1(ch9)/3d-3d/src/: frame.cpp  visual_odometry.cpp
project1(ch9)/3d-3d/test/: CMakeLists.txt  run_vo.cpp
